made changes to correct spacing

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ h1{
   color:#408c99;
 	font-size:19px;
     opacity: 0.89;
+  	text-shadow:1px 1px 1px #cde2ea;
 
 }
 
@@ -50,8 +51,8 @@ h4{
 /*  about info */
 
 .font-weight-light{
-  padding:20px 10px;
-    margin:15px 25px;
+  padding:20px 10px 5px;
+    margin:15px 25px 5px;
 
   text-align: center;
  	box-shadow: 0px 10px 14px -7px #dbe8eb;
@@ -125,30 +126,30 @@ h4{
 
   #education{
 
-  	padding:10px 32px;
+  	padding:10px 12px;
 
 }
+
 #experience{
-  	padding:10px 32px;
+  	padding:10px 12px;
 
-}
-#skills{
-  	padding:10px 32px;
 }
 
 #Business {
-    	padding:13px 32px;
-
+    	padding:10px 12px;
 }
+
+#skills{
+  	padding:10px 12px;
+}
+
+
 #projects{
 
-    	padding:10px 32px;
+    	padding:10px 2px;
 }
 
-#interests{
 
-    	padding:10px 32px;
-}
 
 
 /* nav edit */
